==> rafaart/ESP/ESP8266_MPU6050-master/esp_MPU6050.cpp <==
#include "Arduino.h"
#include "WProgram.h"
#include <Wire.h>
#include <math.h>
#include <esp_MPU6050.h>

bool esp_MPU6050::begin(esp_MPU6050_dps_t scale, esp_MPU6050_range_t range, int mpua)
{
    Wire.begin();
    return beginCommon(scale,range,mpua);
}

void esp_MPU6050::setScale(esp_MPU6050_dps_t scale)
{
    uint8_t value;

    switch (scale)
    {
	case esp_MPU6050_SCALE_250DPS:
	    dpsPerDigit = .007633f;
	    break;
	case esp_MPU6050_SCALE_500DPS:
	    dpsPerDigit = .015267f;
	    break;
	case esp_MPU6050_SCALE_1000DPS:
	    dpsPerDigit = .030487f;
	    break;
	case esp_MPU6050_SCALE_2000DPS:
	    dpsPerDigit = .060975f;
	    break;
	default:
	    break;
    }

    value = readRegister8(esp_MPU6050_REG_GYRO_CONFIG);
    value &= 0b11100111;
    value |= (scale << 3);
    writeRegister8(esp_MPU6050_REG_GYRO_CONFIG, value);
}

esp_MPU6050_dps_t esp_MPU6050::getScale(void)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_GYRO_CONFIG);
    value &= 0b00011000;
    value >>= 3;
    return (esp_MPU6050_dps_t)value;
}

void esp_MPU6050::setRange(esp_MPU6050_range_t range)
{
    uint8_t value;

    switch (range)
    {
	case esp_MPU6050_RANGE_2G:
	    rangePerDigit = .000061f;
	    break;
	case esp_MPU6050_RANGE_4G:
	    rangePerDigit = .000122f;
	    break;
	case esp_MPU6050_RANGE_8G:
	    rangePerDigit = .000244f;
	    break;
	case esp_MPU6050_RANGE_16G:
	    rangePerDigit = .0004882f;
	    break;
	default:
	    break;
    }

    value = readRegister8(esp_MPU6050_REG_ACCEL_CONFIG);
    value &= 0b11100111;
    value |= (range << 3);
    writeRegister8(esp_MPU6050_REG_ACCEL_CONFIG, value);
}

esp_MPU6050_range_t esp_MPU6050::getRange(void)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_ACCEL_CONFIG);
    value &= 0b00011000;
    value >>= 3;
    return (esp_MPU6050_range_t)value;
}

void esp_MPU6050::setDHPFMode(esp_MPU6050_dhpf_t dhpf)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_ACCEL_CONFIG);
    value &= 0b11111000;
    value |= dhpf;
    writeRegister8(esp_MPU6050_REG_ACCEL_CONFIG, value);
}

void esp_MPU6050::setDLPFMode(esp_MPU6050_dlpf_t dlpf)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_CONFIG);
    value &= 0b11111000;
    value |= dlpf;
    writeRegister8(esp_MPU6050_REG_CONFIG, value);
}

void esp_MPU6050::setClockSource(esp_MPU6050_clockSource_t source)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_PWR_MGMT_1);
    value &= 0b11111000;
    value |= source;
    writeRegister8(esp_MPU6050_REG_PWR_MGMT_1, value);
}

esp_MPU6050_clockSource_t esp_MPU6050::getClockSource(void)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_PWR_MGMT_1);
    value &= 0b00000111;
    return (esp_MPU6050_clockSource_t)value;
}

bool esp_MPU6050::getSleepEnabled(void)
{
    return readRegisterBit(esp_MPU6050_REG_PWR_MGMT_1, 6);
}

void esp_MPU6050::setSleepEnabled(bool state)
{
    writeRegisterBit(esp_MPU6050_REG_PWR_MGMT_1, 6, state);
}

bool esp_MPU6050::getIntZeroMotionEnabled(void)
{
    return readRegisterBit(esp_MPU6050_REG_INT_ENABLE, 5);
}

void esp_MPU6050::setIntZeroMotionEnabled(bool state)
{
    writeRegisterBit(esp_MPU6050_REG_INT_ENABLE, 5, state);
}

bool esp_MPU6050::getIntMotionEnabled(void)
{
    return readRegisterBit(esp_MPU6050_REG_INT_ENABLE, 6);
}

void esp_MPU6050::setIntMotionEnabled(bool state)
{
    writeRegisterBit(esp_MPU6050_REG_INT_ENABLE, 6, state);
}

bool esp_MPU6050::getIntFreeFallEnabled(void)
{
    return readRegisterBit(esp_MPU6050_REG_INT_ENABLE, 7);
}

void esp_MPU6050::setIntFreeFallEnabled(bool state)
{
    writeRegisterBit(esp_MPU6050_REG_INT_ENABLE, 7, state);
}

uint8_t esp_MPU6050::getMotionDetectionThreshold(void)
{
    return readRegister8(esp_MPU6050_REG_MOT_THRESHOLD);
}

void esp_MPU6050::setMotionDetectionThreshold(uint8_t threshold)
{
    writeRegister8(esp_MPU6050_REG_MOT_THRESHOLD, threshold);
}

uint8_t esp_MPU6050::getMotionDetectionDuration(void)
{
    return readRegister8(esp_MPU6050_REG_MOT_DURATION);
}

void esp_MPU6050::setMotionDetectionDuration(uint8_t duration)
{
    writeRegister8(esp_MPU6050_REG_MOT_DURATION, duration);
}

uint8_t esp_MPU6050::getZeroMotionDetectionThreshold(void)
{
    return readRegister8(esp_MPU6050_REG_ZMOT_THRESHOLD);
}

void esp_MPU6050::setZeroMotionDetectionThreshold(uint8_t threshold)
{
    writeRegister8(esp_MPU6050_REG_ZMOT_THRESHOLD, threshold);
}

uint8_t esp_MPU6050::getZeroMotionDetectionDuration(void)
{
    return readRegister8(esp_MPU6050_REG_ZMOT_DURATION);
}

void esp_MPU6050::setZeroMotionDetectionDuration(uint8_t duration)
{
    writeRegister8(esp_MPU6050_REG_ZMOT_DURATION, duration);
}

uint8_t esp_MPU6050::getFreeFallDetectionThreshold(void)
{
    return readRegister8(esp_MPU6050_REG_FF_THRESHOLD);
}

void esp_MPU6050::setFreeFallDetectionThreshold(uint8_t threshold)
{
    writeRegister8(esp_MPU6050_REG_FF_THRESHOLD, threshold);
}

uint8_t esp_MPU6050::getFreeFallDetectionDuration(void)
{
    return readRegister8(esp_MPU6050_REG_FF_DURATION);
}

void esp_MPU6050::setFreeFallDetectionDuration(uint8_t duration)
{
    writeRegister8(esp_MPU6050_REG_FF_DURATION, duration);
}

bool esp_MPU6050::getI2CMasterModeEnabled(void)
{
    return readRegisterBit(esp_MPU6050_REG_USER_CTRL, 5);
}

void esp_MPU6050::setI2CMasterModeEnabled(bool state)
{
    writeRegisterBit(esp_MPU6050_REG_USER_CTRL, 5, state);
}

void esp_MPU6050::setI2CBypassEnabled(bool state)
{
    return writeRegisterBit(esp_MPU6050_REG_INT_PIN_CFG, 1, state);
}

bool esp_MPU6050::getI2CBypassEnabled(void)
{
    return readRegisterBit(esp_MPU6050_REG_INT_PIN_CFG, 1);
}

void esp_MPU6050::setAccelPowerOnDelay(esp_MPU6050_onDelay_t delay)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_MOT_DETECT_CTRL);
    value &= 0b11001111;
    value |= (delay << 4);
    writeRegister8(esp_MPU6050_REG_MOT_DETECT_CTRL, value);
}

esp_MPU6050_onDelay_t esp_MPU6050::getAccelPowerOnDelay(void)
{
    uint8_t value;
    value = readRegister8(esp_MPU6050_REG_MOT_DETECT_CTRL);
    value &= 0b00110000;
    return (esp_MPU6050_onDelay_t)(value >> 4);
}

uint8_t esp_MPU6050::getIntStatus(void)
{
    return readRegister8(esp_MPU6050_REG_INT_STATUS);
}

Activites esp_MPU6050::readActivites(void)
{
    uint8_t data = readRegister8(esp_MPU6050_REG_INT_STATUS);

    a.isOverflow = ((data >> 4) & 1);
    a.isFreeFall = ((data >> 7) & 1);
    a.isInactivity = ((data >> 5) & 1);
    a.isActivity = ((data >> 6) & 1);
    a.isDataReady = ((data >> 0) & 1);

    data = readRegister8(esp_MPU6050_REG_MOT_DETECT_STATUS);

    a.isNegActivityOnX = ((data >> 7) & 1);
    a.isPosActivityOnX = ((data >> 6) & 1);

    a.isNegActivityOnY = ((data >> 5) & 1);
    a.isPosActivityOnY = ((data >> 4) & 1);

    a.isNegActivityOnZ = ((data >> 3) & 1);
    a.isPosActivityOnZ = ((data >> 2) & 1);

    return a;
}

Vector esp_MPU6050::readRawAccel(void)
{
    Wire.beginTransmission(mpuAddress);
    #if ARDUINO >= 100
	Wire.write(esp_MPU6050_REG_ACCEL_XOUT_H);
    #else
	Wire.send(esp_MPU6050_REG_ACCEL_XOUT_H);
    #endif
    Wire.endTransmission();

    Wire.beginTransmission(mpuAddress);
    Wire.requestFrom(mpuAddress, 6);

    while (Wire.available() < 6);

    #if ARDUINO >= 100
	uint8_t xha = Wire.read();
	uint8_t xla = Wire.read();
        uint8_t yha = Wire.read();
	uint8_t yla = Wire.read();
	uint8_t zha = Wire.read();
	uint8_t zla = Wire.read();
    #else
	uint8_t xha = Wire.receive();
	uint8_t xla = Wire.receive();
	uint8_t yha = Wire.receive();
	uint8_t yla = Wire.receive();
	uint8_t zha = Wire.receive();
	uint8_t zla = Wire.receive();
    #endif

    ra.XAxis = xha << 8 | xla;
    ra.YAxis = yha << 8 | yla;
    ra.ZAxis = zha << 8 | zla;

    return ra;
}

Vector esp_MPU6050::readRawGyro(void)
{
    Wire.beginTransmission(mpuAddress);
    #if ARDUINO >= 100
	Wire.write(esp_MPU6050_REG_GYRO_XOUT_H);
    #else
	Wire.send(esp_MPU6050_REG_GYRO_XOUT_H);
    #endif
    Wire.endTransmission();

    Wire.beginTransmission(mpuAddress);
    Wire.requestFrom(mpuAddress, 6);

    while (Wire.available() < 6);

    #if ARDUINO >= 100
	uint8_t xha = Wire.read();
	uint8_t xla = Wire.read();
        uint8_t yha = Wire.read();
	uint8_t yla = Wire.read();
	uint8_t zha = Wire.read();
	uint8_t zla = Wire.read();
    #else
	uint8_t xha = Wire.receive();
	uint8_t xla = Wire.receive();
	uint8_t yha = Wire.receive();
	uint8_t yla = Wire.receive();
	uint8_t zha = Wire.receive();
	uint8_t zla = Wire.receive();
    #endif

    rg.XAxis = xha << 8 | xla;
    rg.YAxis = yha << 8 | yla;
    rg.ZAxis = zha << 8 | zla;

    return rg;
}

float esp_MPU6050::readTemperature(void)
{
    int16_t T;
    T = readRegister16(esp_MPU6050_REG_TEMP_OUT_H);
    return (float)T/340 + 36.53;
}

int16_t esp_MPU6050::getGyroOffsetX(void)
{
    return readRegister16(esp_MPU6050_REG_GYRO_XOFFS_H);
}

int16_t esp_MPU6050::getGyroOffsetY(void)
{
    return readRegister16(esp_MPU6050_REG_GYRO_YOFFS_H);
}

int16_t esp_MPU6050::getGyroOffsetZ(void)
{
    return readRegister16(esp_MPU6050_REG_GYRO_ZOFFS_H);
}

void esp_MPU6050::setGyroOffsetX(int16_t offset)
{
    writeRegister16(esp_MPU6050_REG_GYRO_XOFFS_H, offset);
}

void esp_MPU6050::setGyroOffsetY(int16_t offset)
{
    writeRegister16(esp_MPU6050_REG_GYRO_YOFFS_H, offset);
}

void esp_MPU6050::setGyroOffsetZ(int16_t offset)
{
    writeRegister16(esp_MPU6050_REG_GYRO_ZOFFS_H, offset);
}

int16_t esp_MPU6050::getAccelOffsetX(void)
{
    return readRegister16(esp_MPU6050_REG_ACCEL_XOFFS_H);
}

int16_t esp_MPU6050::getAccelOffsetY(void)
{
    return readRegister16(esp_MPU6050_REG_ACCEL_YOFFS_H);
}

int16_t esp_MPU6050::getAccelOffsetZ(void)
{
    return readRegister16(esp_MPU6050_REG_ACCEL_ZOFFS_H);
}

void esp_MPU6050::setAccelOffsetX(int16_t offset)
{
    writeRegister16(esp_MPU6050_REG_ACCEL_XOFFS_H, offset);
}

void esp_MPU6050::setAccelOffsetY(int16_t offset)
{
    writeRegister16(esp_MPU6050_REG_ACCEL_YOFFS_H, offset);
}

void esp_MPU6050::setAccelOffsetZ(int16_t offset)
{
    writeRegister16(esp_MPU6050_REG_ACCEL_ZOFFS_H, offset);
}

uint8_t esp_MPU6050::fastRegister8(uint8_t reg)
{
    uint8_t value;

    Wire.beginTransmission(mpuAddress);
    #if ARDUINO >= 100
	Wire.write(reg);
    #else
	Wire.send(reg);
    #endif
    Wire.endTransmission();

    Wire.beginTransmission(mpuAddress);
    Wire.requestFrom(mpuAddress, 1);
    #if ARDUINO >= 100
	value = Wire.read();
    #else
	value = Wire.receive();
    #endif;
    Wire.endTransmission();

    return value;
}

uint8_t esp_MPU6050::readRegister8(uint8_t reg)
{
    uint8_t value;

    Wire.beginTransmission(mpuAddress);
    #if ARDUINO >= 100
	Wire.write(reg);
    #else
	Wire.send(reg);
    #endif
    Wire.endTransmission();

    Wire.beginTransmission(mpuAddress);
    Wire.requestFrom(mpuAddress, 1);
    while(!Wire.available()) {};
    #if ARDUINO >= 100
	value = Wire.read();
    #else
	value = Wire.receive();
    #endif;
    Wire.endTransmission();

    return value;
}

void esp_MPU6050::writeRegister8(uint8_t reg, uint8_t value)
{
    Wire.beginTransmission(mpuAddress);

    #if ARDUINO >= 100
	Wire.write(reg);
	Wire.write(value);
    #else
	Wire.send(reg);
	Wire.send(value);
    #endif
    Wire.endTransmission();
}

int16_t esp_MPU6050::readRegister16(uint8_t reg)
{
    int16_t value;
    Wire.beginTransmission(mpuAddress);
    #if ARDUINO >= 100
        Wire.write(reg);
    #else
        Wire.send(reg);
    #endif
    Wire.endTransmission();

    Wire.beginTransmission(mpuAddress);
    Wire.requestFrom(mpuAddress, 2);
    while(!Wire.available()) {};
    #if ARDUINO >= 100
        uint8_t vha = Wire.read();
        uint8_t vla = Wire.read();
    #else
        uint8_t vha = Wire.receive();
        uint8_t vla = Wire.receive();
    #endif;
    Wire.endTransmission();

    value = vha << 8 | vla;

    return value;
}

void esp_MPU6050::writeRegister16(uint8_t reg, int16_t value)
{
    Wire.beginTransmission(mpuAddress);

    #if ARDUINO >= 100
	Wire.write(reg);
	Wire.write((uint8_t)(value >> 8));
	Wire.write((uint8_t)value);
    #else
	Wire.send(reg);
	Wire.send((uint8_t)(value >> 8));
	Wire.send((uint8_t)value);
    #endif
    Wire.endTransmission();
}
